# pytest-scim2-server

./: .pre-commit-config.yaml  CHANGES.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
pytest_scim2_server/: __init__.py
tests/: test_scim2_server.py
