[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest-scim2-server"
version = "0.1.3"
description = " SCIM2 server fixture for Pytest "
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "portpicker>=1.6.0",
    "pytest>=8.3.4",
    "scim2-server>=0.1.4",
]

[dependency-groups]
dev = [
    "pre-commit-uv>=4.1.4",
    "pytest-cov>=6.0.0",
    "scim2-client[httpx]>=0.5.1",
    "tox-uv>=1.16.0",
]

[project.entry-points."pytest11"]
scim2_server = "pytest_scim2_server"

[tool.ruff.lint]
select = [
    "B", # flake8-bugbear
    "D", # pydocstyle
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "UP", # pyupgrade
]
ignore = [
    "E501", # line-too-long
    "E722", # bare-except
    "D100", # public module
    "D101", # public class
    "D102", # public method
    "D103", # public function
    "D104", # public package
    "D105", # magic method
    "D106", # nested class
    "D107", # public init
    "D203", # no-blank-line-before-class
    "D213", # multi-line-summary-second-line
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.format]
docstring-code-format = true

[tool.tox]
requires = ["tox>=4.19"]
env_list = [
    "style",
    "py310",
    "py311",
    "py312",
    "py313",
    "minversions",
]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
with_dev = true
commands = [
    ["pytest", "--showlocals", "--full-trace", "{posargs}"],
]

[tool.tox.env.style]
runner = "uv-venv-runner"
commands = [
    ["pre-commit", "run", "--all-files", "--show-diff-on-failure"],
]

[tool.tox.env.minversions]
runner = "uv-venv-lock-runner"
with_dev = true
uv_resolution = "lowest-direct"
